# Intelligent-context-aware-obstacle-avoidance-for-assitive-robotic-systems

./: README.md  ur10.srdf  ur10.urdf.xacro
main_package/: CMakeLists.txt  package.xml
main_package/launch/: experiment.launch  simulation.launch
main_package/scripts/: controller.py  gaze_client.py  gaze_optimiser.py  path_planner.py  tf_broadcaster.py
main_package/src/: segmentation_server.cpp
